# ProjectPotato

./: .gitignore  .gitmodules  CMakeLists.txt  ProjectPotato.py  README.md  setup.py  vcpkg.json
AU3/fix/: Looting_start.au3
AU3/fix/Kilroy Stoneskin Bot V1.3/: Kilroy Stoneskin Bot .au3
AU3/fix/OmniFarmer_Presearing V2.4.0.1/: Changelogs.txt  How to use it.txt
AU3/fix/OmniFarmer_Presearing V2.4.0.1/GW_omniApi/: SkillsAndSmartcastFunctions.au3
AU3/fix/OmniFarmer_Presearing V2.4.0.1/Ini_Files/: Bot_Main.ini  Config_Main.ini  IniFunctions.au3
AU3/fix/PolarBot/: GWA2.au3
AU3/fix/PotatoCoF/: CoF_Dervish_Bot.au3
AU3/fix/PotatoFeathers/: GWA2.au3
AU3/fix/PotatoFiber/: GWA2.au3
AU3/fix/Presearing/GW_omniApi/: vbnfgnhn.au3
AU3/fix/Presearing/Ini_Files/: Config_Main.ini  CustomBuild_Main.ini
AU3/fix/ProjectPotato/: Potato_JadeBros.au3  Potato_Kieran.au3
AU3/fix/ProjectPotato/CoF/: CoF_Dervish_Bot.au3
AU3/fix/ProjectPotato/DervFeather v2.5/: GWA2.au3
AU3/fix/ProjectPotato/DragonMoss/: DragonMoss_v1.0.au3
AU3/fix/ProjectPotato/Kerian 7.0/: log - Faisal Hrodulf.txt
AU3/fix/SoupSaladKebob/: AllInOne_-_Copy.au3  GWA2.au3
AU3/fix/Vaettir_db/: Vaettir_db.au3
AU3/fix/autoit/: GUI.au3  Looting.au3
AU3/fix/autoit/allinone/: GWA2.au3
api/: __init__.py  context.py
api/constants/: __init__.py  agent.py  item.py
api/core/: PATTERNS  __init__.py  assembler.py  constants.py  core_const.py  memory.py  process.py  scanner.py
api/structs/: __init__.py  account.py  agent.py  attribute.py  char.py  gadget.py  game.py  game_entities.py  gameplay.py  guild.py  hero.py  item.py  map.py  npc.py  party.py  player.py  pregame.py  quest.py  skill.py  title.py  trade.py  world.py
core/: core.py  database.py  service.py
docs/: ProjectPotato.ui  architecture.md  phase1-ui-plan.md
fix/: tot_coordinates.txt
fix/HalloweenToTs/: Constants.au3  GWA2.au3  Mobstopper Grabber.au3  Shared.au3  Skele Follower.au3  Skele Leader.au3
fix/Kerian 7.0/: Keiran 7.0.au3
fix/Kilroy Stoneskin Bot V1.3/GW_omniApi/: AddsOn.au3  GWA2.au3  PconsUseFunctions.au3  SkillsAndSmartcastFunctions.au3  ertwertgert.au3
fix/OmniFarmer_Presearing V2.4.0.1/: GW_omniApi.au3
fix/OmniFarmer_Presearing V2.4.0.1/GW_omniApi/: DailyEvents.au3  DeclarationsAndAttributesFunctions.au3  GWA2.au3  Global_Items2.au3  ryrytrtyrty.au3
fix/OmniFarmer_Presearing V2.4.0.1/Ini_Files/: Bot_Second.ini  Config_Second.ini  CustomBuild_Main.ini  CustomBuild_Second.ini
fix/PackMan v1.5.1/: PackMan.au3  PackMan_GUI.au3  _Constants.au3  _Runes_and_Insignias.au3
fix/PolarBot/: PolarBot v9.7.au3
fix/PotatoCoF/: Dependency.au3
fix/PotatoFeathers/: DBFeathers.au3
fix/Presearing/GW_omniApi/: GWA2.au3
fix/ProjectPotato/: Potato_CoF.au3  Potato_Feathers.au3  Potato_Fiber.au3
fix/ProjectPotato/DragonMoss/: Headers.au3  Ranger_Dragon_Moss_Full_Campaign_Kurzick_V1.2.au3
fix/ProjectPotato/Kerian 7.0/: log - Adam Josip.txt  log - Albert Theudofrid.txt  log - Potato Ranger Five.txt  log - Potato Ranger Four.txt  log - Potato Ranger Seven.txt  log - Potato Ranger Three.txt  log - Potato Ranger Two.txt  log - Zakkai Judoc.txt
fix/ProjectPotato/jade_db/: Constants.au3
fix/ReFeather v1.1b/: GWA2.au3  ReFeather v1.1b.au3  config.ini
fix/SoupSaladKebob/archive/: GWA2.au3
fix/Vaettir_db/include/: Constants.au3  GWA2_Modstruct_Items.au3  Looting.au3
fix/autoit/: Constants.au3  Init.au3
fix/autoit/fix/: Conset_dervish_v1.2.2.rar  GUI.au3  Warsupplies.rar  fiber.au3
fix/autoit/fix/Guild Wars Bots II/: GWA2.au3
fix/autoit/fix/gwApi/: MoveToSafeSpot.au3  UpdateWorld.au3  agents.au3  faction.au3  h_h.au3  inventory.au3  items.au3  map.au3  smartcast.au3
fix/autoit/vaettir/: Constants.au3  Looting.au3  Vaettir-v0.3.au3
fix/jade_db/: Jade_db.au3  salv_Jade_sell.au3
gui/: main_window.py  style.qss
include/: PotatoAPI.au3
include/Constants/: MapIDs.au3
projects/app/: CMakeLists.txt  launcher_main.cpp
projects/potato_dll/: CMakeLists.txt
projects/potato_dll/src/: main.cpp  main_window.hpp  services.hpp  worker_grid.hpp
projects/shared/: CMakeLists.txt
projects/shared/include/: config_models.hpp
refactor/fix/HalloweenToTs/: Skele Quest Acceptor.au3
refactor/fix/Kilroy Stoneskin Bot V1.3/: GW_omniApi.au3
refactor/fix/OmniFarmer_Presearing V2.4.0.1/: OmniFarm_Bot - PreSearing.au3
refactor/fix/OmniFarmer_Presearing V2.4.0.1/GW_omniApi/: AddsOn.au3  GWA2_Headers.au3
refactor/fix/PackMan v1.5.1/: GWA2_old.au3
refactor/fix/PotatoFiber/: Potato_DragonMoss.au3
refactor/fix/Presearing/: OmniFarm_Bot - PreSearing.au3
refactor/fix/ProjectPotato/: Potato_KieranBow 2.au3
refactor/fix/autoit/: GWA2.au3
refactor/include/API/: Headers.au3
refactor/include/Constants/: ItemModels.au3
resources/: resources.qrc  style.qss
resources/assets/: README.md
services/: BotService.py  DatabaseService.py  DiscordService.py  GUIService.py  GameService.py  LogService.py  manager.py
src/app/: main.cpp
src/core/: AppPaths.cpp  AppPaths.hpp  BuildInfo.hpp  ServiceCommand.cpp  ServiceCommand.hpp
src/resources/: resources.qrc  style.qss
src/services/: GameService.cpp  GameService.hpp  IService.hpp  LauncherService.cpp  LauncherService.hpp  LogService.cpp  LogService.hpp  QueuedServiceBase.cpp  QueuedServiceBase.hpp  ServiceManager.cpp  ServiceManager.hpp  ThreadSafeQueue.hpp  UpdateService.cpp  UpdateService.hpp  WorkerService.cpp  WorkerService.hpp
src/ui/: MainController.cpp  MainController.hpp  MainWindow.cpp  MainWindow.hpp
src/ui/delegates/: ActionButtonDelegate.cpp  ActionButtonDelegate.hpp  CharacterComboDelegate.cpp  CharacterComboDelegate.hpp
src/ui/models/: AccountTableModel.cpp  AccountTableModel.hpp
src/ui/pages/: LauncherPage.cpp  LauncherPage.hpp  SettingsPage.cpp  SettingsPage.hpp  WorkersPage.cpp  WorkersPage.hpp
src/ui/widgets/: LogConsole.cpp  LogConsole.hpp  NineSliceFrame.cpp  NineSliceFrame.hpp  PotatoHeader.cpp  PotatoHeader.hpp  PotatoSidebar.cpp  PotatoSidebar.hpp  PotatoWindowControls.cpp  PotatoWindowControls.hpp
tools/: extract_mockup_assets.py
(+23 files in other folders)
